# aegis-chrome-extension

./: README.md
backend/: .gitignore  pyproject.toml
backend/app/: config.py  main.py  models.py  predict.py  routes.py  schemas.py  security.py  services.py  signals.py  tasks.py  utils.py
backend/app/phishing_model/: Base_Ensemble.joblib  Meta_LR.joblib
backend/app/scripts/: Aegis_Final.ipynb
frontend/: .gitignore  package.json  pnpm-lock.yaml
frontend/static/: manifest.json
